2005-11-20 Magnus Hagdorn
 * CF_area.py: add method to plot averageRSL residuals on map
 * CF_loadfile.py: when loading RSL residuals can also get time average
 * plotRSLres.py: new program to plot RSL residuals on map
 * rsl_res.cpt: new colour map for RSL residuals
 * setup.py: hook up new files

2005-11-16 Magnus Hagdorn
 * CF_rsl.py: new default set of observations for full data base, plot circles
 * CF_options.py: get possible values for rsl selection from keys()
 * CF_loadfile.py: fix minor bug where RSL res are clipped
 * plotRSLloc.py: add option to print RSL location IDs, coords and number of
   observations
 * plotRSLdata.py: new prog for plotting individual RSL observation
 * setup.py: hook up

2005-11-14 Magnus Hagdorn
 * CF_options.py: allow lists of profiles
 * CF_profile.py: rename CFprofile to CFprofvar, new class CFprofile
   for handling profile lines
 * CF_area.py: profile plotter can use profiles given by CFprofile instances
 * plotCFvar.py: plot any number of profiles
 * plot_extent.py: ditto

2005-11-11 Magnus Hagdorn
 * CF_IOmisc.py: new function to read file with comments, new class for
   handling glacial stages
 * CF_options.py: new option for glacial stages, handle errors
 * CF_profilearea.py: new class for time-distance diagrams
 * CF_proj.py: change integer constants to floats
 * plotCFvar.py: make legend boxes constant sized
 * plotProfileTS.py: use new class

2005-10-31 Magnus Hagdorn
 * CF_loadfile.py: add option to extract RSL curve only for ice-free areas
 * CF_rsl.py: ditto
 * plotRSL.py: ditto

2005-10-11 Magnus Hagdorn
 * fix ChangeLog dates
 * CF_area.py: add support for plotting shapefiles using the python interface
   to shapelib
 * CF_profile.py: in getExent we can now specify an interval to avoid 
   getting into memory problems
 * plotCFstats.py: extract about 100 profiles for extent plots
 * plotCFvar.py: optionally plot a shapefile
 * plot_extent.py: ditto

2005-10-06 Magnus Hagdorn