@@ -61,6 +61,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/eismint2.data']),
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
+                      'progs/construct_field.py',
                       'progs/plotCFvar.py',
                       'progs/plotEISvar.py',
                       'progs/plotEISMINT.py',
